; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_fs-mgr.c_fill_blocklist.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_fs-mgr.c_fill_blocklist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32* }

@SEAF_METADATA_TYPE_FILE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"[fs mgr] Failed to find file %s.\0A\00", align 1
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, i8*, i32, i8*, i32*)* @fill_blocklist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fill_blocklist(i32* %0, i8* %1, i32 %2, i8* %3, i32 %4, i8* %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca %struct.TYPE_4__*, align 8
  %18 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i8* %1, i8** %10, align 8
  store i32 %2, i32* %11, align 4
  store i8* %3, i8** %12, align 8
  store i32 %4, i32* %13, align 4
  store i8* %5, i8** %14, align 8
  store i32* %6, i32** %15, align 8
  %19 = load i8*, i8** %14, align 8
  %20 = bitcast i8* %19 to i32*
  store i32* %20, i32** %16, align 8
  %21 = load i32, i32* %13, align 4
  %22 = load i32, i32* @SEAF_METADATA_TYPE_FILE, align 4
  %23 = icmp eq i32 %21, %22
  br i1 %23, label %24, label %59

24:                                               ; preds = %7
  %25 = load i32*, i32** %9, align 8
  %26 = load i8*, i8** %10, align 8
  %27 = load i32, i32* %11, align 4
  %28 = load i8*, i8** %12, align 8
  %29 = call %struct.TYPE_4__* @seaf_fs_manager_get_seafile(i32* %25, i8* %26, i32 %27, i8* %28)
  store %struct.TYPE_4__* %29, %struct.TYPE_4__** %17, align 8
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %31 = icmp ne %struct.TYPE_4__* %30, null
  br i1 %31, label %36, label %32

32:                                               ; preds = %24
  %33 = load i8*, i8** %12, align 8
  %34 = call i32 @seaf_warning(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i8* %33)
  %35 = load i32, i32* @FALSE, align 4
  store i32 %35, i32* %8, align 4
  br label %61

36:                                               ; preds = %24
  store i32 0, i32* %18, align 4
  br label %37

37:                                               ; preds = %53, %36
  %38 = load i32, i32* %18, align 4
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = icmp slt i32 %38, %41
  br i1 %42, label %43, label %56

43:                                               ; preds = %37
  %44 = load i32*, i32** %16, align 8
  %45 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %46 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %45, i32 0, i32 1
  %47 = load i32*, i32** %46, align 8
  %48 = load i32, i32* %18, align 4
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds i32, i32* %47, i64 %49
  %51 = load i32, i32* %50, align 4
  %52 = call i32 @block_list_insert(i32* %44, i32 %51)
  br label %53

53:                                               ; preds = %43
  %54 = load i32, i32* %18, align 4
  %55 = add nsw i32 %54, 1
  store i32 %55, i32* %18, align 4
  br label %37

56:                                               ; preds = %37
  %57 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %58 = call i32 @seafile_unref(%struct.TYPE_4__* %57)
  br label %59

59:                                               ; preds = %56, %7
  %60 = load i32, i32* @TRUE, align 4
  store i32 %60, i32* %8, align 4
  br label %61

61:                                               ; preds = %59, %32
  %62 = load i32, i32* %8, align 4
  ret i32 %62
}

declare dso_local %struct.TYPE_4__* @seaf_fs_manager_get_seafile(i32*, i8*, i32, i8*) #1

declare dso_local i32 @seaf_warning(i8*, i8*) #1

declare dso_local i32 @block_list_insert(i32*, i32) #1

declare dso_local i32 @seafile_unref(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
